fix: anomaly detector breaking